# file-fun

./: .gitignore  README.md  file-fun.cabal  stack.yaml
app/: Main.hs
