name:                file-fun
version:             0.1.0.0
synopsis:            Fun with files
description:         Please see README.md
homepage:            https://github.com/joshuaclayton/file-fun#readme
license:             MIT
license-file:        LICENSE
author:              Josh Clayton
maintainer:          jclayton@thoughtbot.com
copyright:           2016 Josh Clayton
category:            CLI
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable file-fun
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , optparse-applicative
                     , mtl
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/joshuaclayton/file-fun
